# electricity-transmission-database

./: .gitignore  LICENSE  README.md  setup.cfg
data/: global_transmission_data.xlsx
data/csv/: lines.csv  node_code_name_mapping.csv  nodes.csv
data/shapefiles/AUS/: AUS.dbf  AUS.shp  AUS.shx
data/shapefiles/BRA/: BRA.dbf  BRA.shp  BRA.shx
data/shapefiles/CAN/: CAN.dbf  CAN.shx
data/shapefiles/IDN/: IDN.dbf  IDN.shp  IDN.shx
data/shapefiles/IND/: IND.dbf  IND.shp  IND.shx
data/shapefiles/JPN/: JPN.dbf  JPN.shp  JPN.shx
data/shapefiles/MYS/: MYS.dbf  MYS.shp  MYS.shx
data/shapefiles/PHL/: PHL.dbf  PHL.shp  PHL.shx
data/shapefiles/RUS/: RUS.dbf  RUS.shx
data/shapefiles/THA/: THA.dbf  THA.shp  THA.shx
data/shapefiles/USA/: USA.dbf  USA.shp
data/shapefiles/VNM/: VNM.dbf  VNM.shp  VNM.shx
data/shapefiles/excluded_regions/: excluded_regions.dbf  excluded_regions.shx
data/shapefiles/usa/: usa.dbf  usa.shx
data/shapefiles/world/: world.dbf  world.shx
notebooks/: make_plots.ipynb  test.ipynb
outputs/: TABLE.csv
outputs/figures/: map_capacity_existing.html  map_capacity_planned.html  map_excluded_regions.html
src/: database.py  dataviz.py  loader.py  subregions.py  utils.py
src/usa/: ba-transmission.ipynb  usa-centerpoints.csv  usa-transmission-capacity.csv
usa/: ba-mapper.csv  ba-mapping.ipynb  ba-transmission.ipynb  usa.ipynb
