[metadata]
name = global_transmission_database

[options]
packages = find_namespace:
python_requires = >= 3.9
zip_safe = False
install_requires =
    geopandas
    jupyterlab
    openpyxl
    matplotlib
    plotly
    networkx

[options.packages.find]
#include = scripts.*
include = src

[tox:tox]
envlist = py311
skipsdist = true

[testenv]
install_command = pip install {opts} {packages}
basepython = python3.9
setenv =
  PYTHONPATH=.
deps =
    .[dev]
    mypy
commands =
    pytest
    # mypy {posargs:transitionzero}

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = .git,.hg,.mypy_cache,.tox,.venv,_build,buck-out,build,dist

[flake8]
max-line-length = 104
exclude = .tox,.eggs,ci/templates,build,dist, __init__.py
ignore=E741,F403,E265,W504,E226,W503,E501,E203

[tool:pytest]
norecursedirs =
    migrations .ipynb_checkpoints

python_files =
    test_*.py
    *_test.py
    tests.py
addopts =
    -ra
    --strict-markers
    --doctest-modules
    --doctest-glob=\*.rst
    --tb=short
testpaths =
    tests

[tool:isort]
profile=black
# known_first_party = transitionzero.org
skip = .tox,.eggs,ci/templates,build,dist

[mypy]
ignore_missing_imports = True
pretty = True
show_error_codes = True
show_error_context = True
show_traceback = True